# time_shifters

./: CMakeLists.txt
dirs/bit-alchemy/assets/Textures/: DemoLevel_mossy.tmx  Mossy_BackgroundDecoration.tsx  Mossy_Decorations&Hazards.tsx  Mossy_FloatingPlatforms.tsx  Mossy_Hanging Plants.tsx  Mossy_MossyHills.tsx  Mossy_TileSet.tsx  oak_forest.tmx
include/TS/Components/: AttackBoxCollider.hpp  AttackCollidable.hpp  BaseBanditAI.hpp  ModifiedBoxCollider.hpp  ScreenText.hpp  Updateable.hpp
include/TS/Entities/: Bandit.hpp  Character.hpp  Hero.hpp  SlideDust.hpp
include/TS/Scenes/: DemoLevel.hpp
include/TS/Systems/: UpdateableSystem.hpp
include/TS/Utility/: Define.hpp
src/TS/: main.cpp
src/TS/Components/: AttackBoxCollider.cpp  AttackCollidable.cpp  BaseBanditAI.cpp  ModifiedBoxCollider.cpp  ScreenText.cpp  Updateable.cpp
src/TS/Entities/: Bandit.cpp  Character.cpp  Hero.cpp  SlideDust.cpp
src/TS/Scenes/: DemoLevel.cpp
src/TS/Systems/: UpdateableSystem.cpp
src/TS/Utility/: Define.cpp
